feature: add autowiring

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,7 @@
 services:
   _defaults:
     autoconfigure: true
+    autowire: true
 
   Guave\TeamBundle\Controller\:
     resource: ../src/Controller
