feat: major contao 5+ update

--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,30 @@
 {
 	"name": "guave/team-bundle",
 	"description": "Team Content Element for Contao 4.13+",
-	"type": "contao-bundle",
 	"license": "ISC",
-	"authors": [
-		{
-			"name": "Christopher Stadler",
-			"email": "christopher.stadler@guavestudios.com",
-			"homepage": "https://github.com/guavestudios"
-		}
-	],
+	"type": "contao-bundle",
+	"homepage": "https://www.guaveinteractive.ch",
+	"support": {
+		"issues": "https://github.com/guavestudios/teambundle/issues",
+		"source": "https://github.com/guavestudios/teambundle"
+	},
 	"require": {
 		"php": "^8.1",
 		"contao/core-bundle": "^4.13 || ^5.0",
-		"symfony/config": "^5.4 || ^6.4",
-		"symfony/dependency-injection": "^5.4 || ^6.4",
-		"symfony/http-kernel": "^5.4 || ^6.4",
+		"symfony/config": "^5.4 || ^6.4 || ^7.0",
+		"symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
+		"symfony/http-kernel": "^5.4 || ^6.4 || ^7.0",
 		"menatwork/contao-multicolumnwizard-bundle": "~3.6",
-		"terminal42/dc_multilingual": "^4.4"
+		"terminal42/dc_multilingual": "^4.4 || ^4.6"
 	},
 	"require-dev": {
-		"roave/security-advisories": "dev-latest"
+		"bamarni/composer-bin-plugin": "^1.8",
+		"contao/manager-plugin": "^2.3.1",
+		"phpunit/phpunit": "^9.6",
+		"roave/security-advisories": "dev-latest",
+		"symfony/phpunit-bridge": "^5.4 || ^6.4 || ^7.0"
 	},
 	"conflict": {
-		"contao/core": "*",
 		"contao/manager-plugin": "<2.0 || >=3.0"
 	},
 	"autoload": {
@@ -40,18 +41,35 @@
 			"contao/templates/"
 		]
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Guave\\TeamBundle\\Tests\\": "tests/"
+		}
+	},
 	"config": {
 		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true,
 			"contao-components/installer": true,
 			"contao/manager-plugin": true,
 			"php-http/discovery": false
 		}
 	},
 	"extra": {
+		"bamarni-bin": {
+			"bin-links": false,
+			"target-directory": "tools",
+			"forward-command": true
+		},
 		"contao-manager-plugin": "Guave\\TeamBundle\\ContaoManager\\Plugin"
 	},
-	"support": {
-		"issues": "https://github.com/guavestudios/TeamBundle/issues",
-		"source": "https://github.com/guavestudios/TeamBundle"
+	"scripts": {
+		"all": [
+			"@unit-tests",
+			"@ecs",
+			"@phpstan"
+		],
+		"ecs": "@php tools/ecs/vendor/bin/ecs check src tests --config ecs.php --fix --ansi",
+		"phpstan": "@php tools/phpstan/vendor/bin/phpstan analyze --ansi",
+		"unit-tests": "@php vendor/bin/phpunit --colors=always"
 	}
 }
