--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "guave/team-bundle",
-	"description": "Team Content Element for Contao 4.13+",
+	"description": "Team Content Element for Contao 5.0+",
 	"license": "ISC",
 	"type": "contao-bundle",
 	"homepage": "https://www.guaveinteractive.ch",
@@ -10,19 +10,19 @@
 	},
 	"require": {
 		"php": "^8.1",
-		"contao/core-bundle": "^4.13 || ^5.0",
-		"symfony/config": "^5.4 || ^6.4 || ^7.0",
-		"symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
-		"symfony/http-kernel": "^5.4 || ^6.4 || ^7.0",
+		"contao/core-bundle": "^5.0",
+		"symfony/config": "^6.4 || ^7.4",
+		"symfony/dependency-injection": "^6.4 || ^7.4",
+		"symfony/http-kernel": "^6.4 || ^7.4",
 		"menatwork/contao-multicolumnwizard-bundle": "~3.6",
-		"terminal42/dc_multilingual": "^4.4 || ^4.6"
+		"terminal42/dc_multilingual": "^4.5 || ^4.6"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.8",
 		"contao/manager-plugin": "^2.3.1",
 		"phpunit/phpunit": "^9.6",
 		"roave/security-advisories": "dev-latest",
-		"symfony/phpunit-bridge": "^5.4 || ^6.4 || ^7.0"
+		"symfony/phpunit-bridge": "^6.4 || ^7.4"
 	},
 	"conflict": {
 		"contao/manager-plugin": "<2.0 || >=3.0"
